--- a/vignettes/SpidermiR.Rmd
+++ b/vignettes/SpidermiR.Rmd
@@ -75,7 +75,7 @@ references:
 
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
-  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEngine{rmarkdown::render()}
   \usepackage[utf8]{inputenc}
 ---
 
@@ -97,7 +97,7 @@ GeneMania provides us with an enormous collection of data sets for interaction n
 An important regulatory mechanism of these network data involves microRNAs (miRNAs). miRNAs are involved in various cellular functions, such as differentiation, proliferation, and tumourigenesis. 
 However, our understanding of the processes regulated by miRNAs is currently limited and the integration of miRNA data in these networks provides a comprehensive genome-scale analysis of miRNA regulatory networks.Actually, GeneMania doesn't integrate the information of miRNAs and their interactions in the network.
 
-`SpidermiR` allow the user to query, prepare, download network data (e.g. from GeneMania), and to integrate this information with miRNA data 
+`SpidermiR` allows the user to query, prepare, download network data (e.g. from GeneMania), and to integrate this information with miRNA data 
 with the possibility to analyze 
 these downloaded data directly in one single R package. 
 This document gives a short overview of the essential `SpidermiR` methods and their application. 
@@ -124,6 +124,7 @@ The user can query the species supported by GeneMania, using the function Spider
 
 ```{r, eval = TRUE}
 org<-SpidermiRquery_species(species)
+
 ```
 
 The list of species is show below:
@@ -138,7 +139,7 @@ knitr::kable(org, digits = 2,
 The user can query the network types supported by GeneMania for a specific specie, using the function `SpidermiRquery_networks_type`. The user can select a specific specie using an index obtained by the function `SpidermiRquery_species` (e.g. organismID=org[12,] is the input for Homo_sapiens)
 
 ```{r, eval = TRUE}
-net_type<-SpidermiRquery_networks_type(organismID=org[18,])
+net_type<-SpidermiRquery_networks_type(organismID=org[9,])
 ```
 
 The list of network categories in Saccharomyces cerevisiae is show below:
@@ -162,7 +163,7 @@ The network category can be filtered using the following parameters:
 
 ```{r, eval = TRUE}
 
-net_shar_prot<-SpidermiRquery_spec_networks(organismID = org[18,],
+net_shar_prot<-SpidermiRquery_spec_networks(organismID = org[9,],
                                     network = "SHpd")
 ```
 
@@ -203,6 +204,14 @@ str(out_net)
 ```
 
 
+## `SpidermiRdownload_pharmacomir`: Download Pharmaco-miR Verified Sets from PharmacomiR database
+The user can download Pharmaco-miR Verified Sets from PharmacomiR database [@ref6].
+
+```{r, eval = TRUE}
+mir_pharmaco<-SpidermiRdownload_pharmacomir(pharmacomir)
+```
+
+
 
 # `SpidermiRprepare`: Preparing the data
 
@@ -212,7 +221,7 @@ The user in this step obtained a gene network matrix with the integration of gen
 
 ```{r, eval = TRUE}
 
-geneSymb_net<-SpidermiRprepare_NET(organismID = org[18,],
+geneSymb_net<-SpidermiRprepare_NET(organismID = org[9,],
                                     data = out_net)
 ```
 
@@ -252,8 +261,16 @@ miRNA_complNET<-SpidermiRanalyze_mirna_gene_complnet(data=geneSymb_net,disease="
 ```
 
 
-## `SpidermiRanalyze_mirna_extra_cir`: Integration of Extracellular/Circulating miRNA
+## `SpidermiRanalyze_mirnanet_pharm`: Integration of pharmacomiR in the network
+The user in this step can integrate the pharmacomiR database in order to link miRNA and drug effect in a specific network.
 
+```{r, eval = FALSE}
+mir_pharmnet<-SpidermiRanalyze_mirnanet_pharm(mir_ph=mir_pharmaco,miRNA_NET)
+```
+
+
+
+## `SpidermiRanalyze_mirna_extra_cir`: Integration of Extracellular/Circulating miRNA
 
 The user can select the extracellular/circulating miRNAs found in the network obtained from `SpidermiRanalyze_mirna_network` or `SpidermiRanalyze_mirna_gene_complnet`.
 Extracellular/circulating miRNAs include data from mirandola database [@ref4].
@@ -355,7 +372,7 @@ cd_net<-SpidermiRanalyze_Community_detection_net(data=miRNA_NET,comm_det=comm,si
 
 ## `SpidermiRanalyze_Community_detection_bi`: Community detection from a set of biomarkers of interest
 
-This function, starting from communites obtained from `SpidermiRanalyze_Community_detection`, is able to indicate in which communites are presented a set of biomarker of interest.
+This function, starting from communites obtained from `SpidermiRanalyze_Community_detection`, is able to indicate in which communites are presented a set of biomarkers of interest.
 
 ```{r, eval = FALSE}
 gi=c("CF","ROCK1","KIT","CCND2")
@@ -369,7 +386,7 @@ The user can easily visualize network data.
 
 ```{r, eval = TRUE}
 library(networkD3)
-miRNA_complNET <-data.frame(gA=c('hsa-let-7a','hsa-miR-141','hsa-miR-300','FOXM1','hsa-let-7a'),gB=c('FOXM1','CDK','KPNA4','FOXO1','CDK'),stringsAsFactors=FALSE)
+miRNA_complNET <-data.frame(gA=c('hsa-let-7a','hsa-miR-141','hsa-miR-300','FOXM1','hsa-let-7a','IMP1','hsa-let-7'),gB=c('FOXM1','CDK','KPNA4','FOXO1','CDK','taxol','IMP1'),stringsAsFactors=FALSE)
 
 SpidermiRvisualize_mirnanet(data=miRNA_complNET)
 ```
@@ -386,8 +403,9 @@ SpidermiRvisualize_BI(data=miRNA_complNET,BI=biomark_of_interest)
 ```
 
 
+
 # SpidermiR Downstream Analysis: Case Study
-## Case Study n.1: Role of miRNAs in shared protein domains in Prostate Cancer
+## Case Study n.1: Role of miRNAs in shared protein domains network in Prostate Cancer
 
 In this case study, we downloaded shared protein domains network in Homo Sapiens, using SpidermiRquery, SpidermiRprepare, and SpidermiRdownload.   
 
@@ -398,16 +416,45 @@ SpidermiRvisualize was used to see the results.
 ```{r, eval = FALSE}
 
 org<-SpidermiRquery_species(species)
-net_shar_prot<-SpidermiRquery_spec_networks(organismID = org[12,],network = "SHpd")
+net_shar_prot<-SpidermiRquery_spec_networks(organismID = org[6,],network = "SHpd")
 out_net<-SpidermiRdownload_net(net_shar_prot)
-geneSymb_net<-SpidermiRprepare_NET(organismID = org[12,],data = out_net)
+geneSymb_net<-SpidermiRprepare_NET(organismID = org[6,],data = out_net)
+miRNA_complNET<-SpidermiRanalyze_mirna_gene_complnet(data=geneSymb_net,disease="prostate cancer")
+
+biomark_of_interest<-read.delim("C:/Users/UserInLab05/Google Drive/MIRNA AND GENEMANIA/1 case study/deg_prostate.txt",header=FALSE)
+subnet<-SpidermiRanalyze_direct_subnetwork(data=miRNA_complNET,BI=biomark_of_interest$V1)
+comm2<-  SpidermiRanalyze_Community_detection(data=subnet,type="FC") 
+cd_net<-SpidermiRanalyze_Community_detection_subnet(data=subnet,comm_det=comm2,size=2)
+SpidermiRvisualize_mirnanet(data=cd_net)
 miRNA_NET<-SpidermiRanalyze_mirna_network(data=geneSymb_net,disease="prostate cancer")
-biomark_of_interest<-c("hsa-miR-214","PTEN","FOXO1","hsa-miR-27a")
-GIdirect_net_neigh<-SpidermiRanalyze_subnetwork_neigh(data=miRNA_NET,BI=biomark_of_interest)
-SpidermiRvisualize_mirnanet(data=GIdirect_net_neigh)
+
+cd_net_miRNA<-SpidermiRanalyze_Community_detection_net(data=miRNA_NET,comm_det=comm2,size=2)
+
+SpidermiRvisualize_mirnanet(data=cd_net_miRNA)
+
+
 
 ```
 
+## Case Study n.2: miRNAs regulating degree centrality genes in physical interactions network in breast cancer
+
+```{r, eval = FALSE}
+org<-SpidermiRquery_species(species)
+net_PHint<-SpidermiRquery_spec_networks(organismID = org[6,],network = "PHint")
+out_net<-SpidermiRdownload_net(net_PHint)
+geneSymb_net<-SpidermiRprepare_NET(organismID = org[6,],data = out_net)
+ds<-do.call("rbind", geneSymb_net)
+data1<-as.data.frame(ds[!duplicated(ds), ]) 
+
+sdas<-cbind(data1$gene_symbolA,data1$gene_symbolB)
+
+miRNA_NET<-SpidermiRanalyze_mirna_network(data=geneSymb_net,disease="breast cancer")
+topwhol<-SpidermiRanalyze_degree_centrality(sdas)
+top10_cent_gene<-SpidermiRanalyze_degree_centrality(miRNA_NET)
+miRNA_degree<-top10_cent_gene[grep("hsa",top10_cent_gene$dfer),]
+
+
+```
 
 ******
 
