--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,7 @@
 * SpidermiRquery_disease	Searching by miRNA-disease.
 * SpidermiRdownload_net	Downloading network data.
 * SpidermiRdownload_pharmacomir	Download both miRNA target and the gene-drug interaction from PharmacomiR database.
+* SpidermiRdownload_miRNAvalidate Download miRNA validated database
 * SpidermiRprepare_NET	Prepare matrix of gene network with Ensembl Gene ID, and gene symbols.
 * SpidermiRanalyze_mirna_network	Integration of microRNA-target interactions.
 * SpidermiRanalyze_mirna_gene_complnet	 Integration of microRNA-target complete interactions.
