--- a/vignettes/SpidermiR.Rmd
+++ b/vignettes/SpidermiR.Rmd
@@ -35,8 +35,20 @@ references:
   issued:
     year: 2009
 
-
 - id: ref3
+  title: Pharmaco miR linking microRNAs and drug effects.
+  author: 
+  - family: Rukov J, Wilentzik R, Jaffe I, Vinther J, Shomron N.
+    given:
+  journal: Briefings in Bioinformatics
+  volume: 15
+  number: 4
+  pages: 648-59
+  issued:
+    year: 2013
+    
+    
+- id: ref4
   title: miRWalk - database prediction of possible miRNA binding sites by "walking" the genes of 3 genomes.
   author: 
   - family: Dweep H, Sticht C, Pandey P, Gretz N.
@@ -47,8 +59,9 @@ references:
   pages: 839-7
   issued:
     year: 2011
+    
 
-- id: ref4
+- id: ref5
   title: miRandola Extracellular Circulating microRNAs Database.
   author: 
   - family: Russo F, Di Bella S, Nigita G, Macca V, Lagana A, Giugno R, Pulvirenti A, Ferro A.
@@ -59,8 +72,22 @@ references:
   pages: e47786
   issued:
     year: 2012
+    
 
-- id: ref5
+- id: ref6
+  title: miRandola Extracellular Circulating microRNAs Database.
+  author: 
+  - family: Colaprico A, Silva TC, Olsen C, Garofano L, Cava C, Garolini D, Sabedot TS, Malta TM, Pagnotta SM, Castiglioni I, Ceccarelli M, Bontempi G, Noushmehr H.
+    given:
+  journal: Nucleic Acids Res.
+  volume: 44
+  number: 8
+  pages: e71
+  issued:
+    year: 2016    
+    
+
+- id: ref7
   title: The igraph software package for complex network research.
   author: 
   - family: Csardi G, Nepusz T.
@@ -73,17 +100,7 @@ references:
     year: 2006
 
 
-- id: ref6
-  title: Pharmaco miR linking microRNAs and drug effects.
-  author: 
-  - family: Rukov J, Wilentzik R, Jaffe I, Vinther J, Shomron N.
-    given:
-  journal: Briefings in Bioinformatics
-  volume: 15
-  number: 4
-  pages: 648-59
-  issued:
-    year: 2013
+
 
 
 
@@ -232,8 +249,16 @@ list<-SpidermiRdownload_miRNAvalidate(validated)
 ```
 
 
+## `SpidermiRdownload_miRNAextra_cir`:Download Extracellular Circulating microRNAs
+The user can download Pharmaco-miR Verified Sets from miRandola database
+
+```{r, eval = FALSE}
+list<-SpidermiRdownload_miRNAextra_cir(miRNAextra_cir)
+```
+
+
 ## `SpidermiRdownload_pharmacomir`: Download Pharmaco-miR Verified Sets from PharmacomiR database
-The user can download Pharmaco-miR Verified Sets from PharmacomiR database [@ref6].
+The user can download Pharmaco-miR Verified Sets from PharmacomiR database [@ref3].
 
 ```{r, eval = TRUE}
 mir_pharmaco<-SpidermiRdownload_pharmacomir(pharmacomir=pharmacomir)
@@ -262,7 +287,7 @@ knitr::kable(geneSymb_net[[1]][1:5,c(1,2,3,5,8)], digits = 2,
 # `SpidermiRanalyze`: : Analyze data from network data
 
 ## `SpidermiRanalyze_mirna_network`: Integration of microRNA-target interactions. 
-The user in this step obtained a network matrix with miRNA-target interactions starting from a specific network. The user can focus on miRNAs have already linked to a particular disease or take all miRNAs. miRNA-gene interactions include data from validated studies (currently, mirTAR, miR2disease, and miRNAwalk [@ref2] [@ref3]).
+The user in this step obtained a network matrix with miRNA-target interactions starting from a specific network. The user can focus on miRNAs have already linked to a particular disease or take all miRNAs. miRNA-gene interactions include data from validated studies (currently, mirTAR, miR2disease, and miRNAwalk [@ref2] [@ref4]).
 You can filter the search by disease.
 The miRNA network can be filtered by disease using the name of the disease, as obtained from `SpidermiRquery_disease`.
 
@@ -280,7 +305,7 @@ str(miRNA_NET)
 
 ## `SpidermiRanalyze_mirna_gene_complnet`: Integration of microRNA-target complete interactions 
 The user in this step obtained a gene network matrix with interaction miRNA and target,  and gene-gene interaction. 
-The user can focus on miRNA have already linked to a particular disease or take all miRNAs. miRNA-gene interactions include data from validated studies (currently, mirTAR, miR2disease, and miRNAwalk [@ref2] [@ref3]).
+The user can focus on miRNA have already linked to a particular disease or take all miRNAs. miRNA-gene interactions include data from validated studies (currently, mirTAR, miR2disease, and miRNAwalk [@ref2] [@ref4]).
 The miRNA network can be filtered by disease using the name of the disease, as obtained from `SpidermiRquery_disease`.
 
 
@@ -301,7 +326,7 @@ mir_pharmnet<-SpidermiRanalyze_mirnanet_pharm(mir_ph=mir_pharmaco,net=miRNA_NET)
 ## `SpidermiRanalyze_mirna_extra_cir`: Integration of Extracellular/Circulating miRNA
 
 The user can select the extracellular/circulating miRNAs found in the network obtained from `SpidermiRanalyze_mirna_network` or `SpidermiRanalyze_mirna_gene_complnet`.
-Extracellular/circulating miRNAs include data from mirandola database [@ref4].
+Extracellular/circulating miRNAs include data from mirandola database [@ref5].
 The user using the following parameteres can specify the network type: 
 
 * **mT** to obtain a microRNA-target interactions
@@ -365,11 +390,21 @@ This function provides degree centrality, defined as the total number of direct 
 top10_cent_gene<-SpidermiRanalyze_degree_centrality(miRNA_NET,cut=10)
 ```
 
+## `SpidermiRanalyze_DEnetworkTCGA`: Integration with TCGA data in order to obtain a network of  differentially expressed (DE) genes or miRNAs.
+
+`SpidermiRanalyze_DEnetworkTCGA` is able to identify using `TCGAbiolinks package` [@ref6] differentially expressed (DE) genes or miRNAs in a TCGA data ( e.g. BRCA:breast camcer) between two classes (e.g. normal and tumour). For more detail, please see [@ref6]. Starting from DE genes or miRNAs the user can select how these biomarkers act in a specific network looking for  the edges between them (using the function `SpidermiRanalyze_direct_subnetwork`). 
+
+```{r, eval = FALSE}
+de_int<-SpidermiRanalyze_DEnetworkTCGA(data=miRNA_NET,cancer="BRCA",PlatformCancer="IlluminaHiSeq_RNASeqV2",tumour=c("TCGA-BH-A1FC-11A-32R-A13Q-07","TCGA-AO-A03P-01A-11R-A00Z-07"),
+                                       normal=c("TCGA-BH-A209-11A-42R-A157-07","TCGA-E9-A1N4-11A-33R-A14M-07") )
+
+
+```
 
 
 ## `SpidermiRanalyze_Community_detection`: Find community detection
 
-This function try to find dense subgraphs in directed or undirected graphs, by optimizing some criteria, using igraph library [@ref5]. 
+This function try to find dense subgraphs in directed or undirected graphs, by optimizing some criteria, using igraph library [@ref7]. 
 
 The user can choose the algorithm to calculate the community structure: 
 
@@ -433,8 +468,31 @@ The user can Visualize results obtained by `SpidermiRanalyze_mirna_network` show
 
 ```{r, eval = TRUE}
 
-SpidermiRvisualize_plot_target(miRnet=miRNA_NET)
+SpidermiRvisualize_plot_target(data=miRNA_NET)
 ```
+
+## `SpidermiRvisualize_degree_dist`: plots the degree distribution of the network 
+The user can visualize the degree distribution of the network:
+
+```{r,fig.width=4, fig.height=4, eval = TRUE}
+SpidermiRvisualize_degree_dist(data=miRNA_NET)
+```
+
+
+## `SpidermiRvisualize_adj_matrix`: plots the adjacency matrix of the network
+The user can visualize the adjacency matrix of the network:
+
+```{r, fig.width=10, fig.height=10,eval = TRUE}
+SpidermiRvisualize_adj_matrix(data=miRNA_NET[1:30,])
+```
+
+## `SpidermiRvisualize_3Dbarplot`: 3D barplot 
+The user can visualize 3D barplot with a summary representation of the network (number of edges, nodes, miRNAs):
+
+```{r,fig.width=4, fig.height=4, eval = TRUE}
+SpidermiRvisualize_3Dbarplot(Edges_1net=1041003,Edges_2net=100016,Edges_3net=3008,Edges_4net=1493,Edges_5net=1598,NODES_1net=16502,NODES_2net=13338,NODES_3net=1429,NODES_4net=675,NODES_5net=712,nmiRNAs_1net=0,nmiRNAs_2net=74,nmiRNAs_3net=0,nmiRNAs_4net=0,nmiRNAs_5net=37)
+```
+
 
 
 # SpidermiR Downstream Analysis: Case Study
@@ -452,7 +510,7 @@ org<-SpidermiRquery_species(species)
 net_shar_prot<-SpidermiRquery_spec_networks(organismID = org[6,],network = "SHpd")
 out_net<-SpidermiRdownload_net(net_shar_prot)
 geneSymb_net<-SpidermiRprepare_NET(organismID = org[6,],data = out_net)
-miRNA_complNET<-SpidermiRanalyze_mirna_gene_complnet(data=geneSymb_net,disease="prostate cancer")
+miRNA_complNET<-SpidermiRanalyze_mirna_gene_complnet(data=geneSymb_net,disease="prostate cancer",miR_trg="val")
 
 biomark_of_interest<-read.delim("C:/Users/UserInLab05/Google Drive/MIRNA AND GENEMANIA/1 case study/deg_prostate.txt",header=FALSE)
 subnet<-SpidermiRanalyze_direct_subnetwork(data=miRNA_complNET,BI=biomark_of_interest$V1)
