--- a/vignettes/SpidermiR.Rmd
+++ b/vignettes/SpidermiR.Rmd
@@ -148,6 +148,7 @@ knitr::kable(org, digits = 2,
 ```
 
 
+
 ## `SpidermiRquery_networks_type`: Searching by network categories
 
 The user can query the network types supported by GeneMania for a specific specie, using the function `SpidermiRquery_networks_type`. The user can select a specific specie using an index obtained by the function `SpidermiRquery_species` (e.g. organismID=org[6,] is the input for Homo_sapiens,organismID=org[9,]  is the input for Saccharomyces cerevisiae  )
@@ -417,14 +418,16 @@ mol<-SpidermiRanalyze_Community_detection_bi(data=comm,BI=gi)
 ## `SpidermiRanalyze_DEnetworkTCGA`: Integration with TCGA data in order to obtain a network of  differentially expressed (DE) genes or miRNAs.
 
 `SpidermiRanalyze_DEnetworkTCGA` integrates the information of differential analysis of TCGA data in the network. The final result will be a network with only DE genes or miRNAs depending  whether the user chooses mRNA or miRNA  TCGA data.
-```{r, eval = FALSE}
-miRNA_cN <-data.frame(gA=c('hsa-let-7a','SSTR1'),gB=c('FOXM1','GATA5'),stringsAsFactors=FALSE)
-cancer <- "TCGA-BRCA"
-PlatformCancer <- "Illumina HiSeq"
-tumour<-c("TCGA-BH-A0DL-01A-11R-A115-07","TCGA-AO-A03P-01A-11R-A00Z-07")
-normal<-c("TCGA-BH-A209-11A-42R-A157-07","TCGA-E9-A1N4-11A-33R-A14M-07")
-de_int<-SpidermiRanalyze_DEnetworkTCGA(data=miRNA_cN,cancer,PlatformCancer,
-tumour,normal,path = "exampleData")
+
+```{r, eval = TRUE}
+miRNA_cN <-data.frame(gA=c('IGFL3','GABRA1'),gB=c('IGFL2','KRT13'),stringsAsFactors=FALSE)
+tumour<-c("TCGA-E9-A1RD-11A","TCGA-E9-A1RC-01A")
+normal<-c("TCGA-BH-A18P-11A","TCGA-BH-A18L-11A") 
+de_int<-SpidermiRanalyze_DEnetworkTCGA(data=miRNA_cN,
+                                        TCGAmatrix=Data_CANCER_normUQ_filt,
+                                        tumour,
+                                        normal
+                                       )
 ```
 
 # `SpidermiRvisualize`: To visualize the network 
@@ -487,57 +490,56 @@ SpidermiRvisualize_3Dbarplot(Edges_1net=1041003,Edges_2net=100016,Edges_3net=300
 ```
 
 
+```{r, eval = TRUE,echo = FALSE}
+B<-matrix( c("Gene network", "Validated miRNA-target","", "Predicted miRNA-target","","","", "Extracellular Circulating microRNAs", "miRNA-disease", "Drug Associations",
+      
+             "GeneMania", "miRTAR", "miRwalk", "DIANA", "Miranda", "PicTar","TargetScan","miRandola","miR2disease","Pharmaco-miR",
+             
+             "Current","N/A","miRwalk2","DIANA- 5.0","N/A","N/A","TargetScan7.1","miRandola1.7","N/A","N/A",
+             2016,2009,2015,2013,2010,"N/A","2016",2015,2009,"N/A"
+             
+             ), nrow=10, ncol=4)
+colnames(B)<-c("CATEGORY","EXTERNAL DATABASE","VERSION","LAST UPDATE")
 
-# SpidermiR Downstream Analysis: Case Study
+```
+
+# `Features databases SpidermiR`: 
+
+Features of databases integrated in `SpidermiR` are:
+```{r, eval = TRUE, echo = FALSE}
+knitr::kable(B, digits = 2,
+             caption = "Features",row.names = FALSE)
+```
+
+
+
+# SpidermiR Downstream Analysis: Case Study Please see `SpidermiR:Application Examples` for more information.
 ## Case Study n.1: Role of miRNAs in shared protein domains network in Prostate Cancer
 
 In this case study, we downloaded shared protein domains network in Homo Sapiens, using SpidermiRquery, SpidermiRprepare, and SpidermiRdownload.   
 
-Then, we focused on role of miRNAs in this network. We integrated miRNA information using SpidermiRanalyze. We obtained a big network, and in order to understand the underlying biological process of a set of biomarker of interest (e.g. from lab) we performed an analysis to identify their neighbor biomarkers in the shared protein domains network. 
+Then, we focused on role of miRNAs in this network. We integrated miRNA information using SpidermiRanalyze. We obtained a big network, and in order to understand the underlying biological process of a set of biomarker of interest (e.g. from DEG) we performed an analysis to identify their neighbor biomarkers in the shared protein domains network. Please see `SpidermiR:Application Examples` for more information. 
 
 SpidermiRvisualize was used to see the results.
 
 ```{r, eval = FALSE}
 
-org<-SpidermiRquery_species(species)
-net_shar_prot<-SpidermiRquery_spec_networks(organismID = org[6,],network = "SHpd")
-out_net<-SpidermiRdownload_net(net_shar_prot)
-geneSymb_net<-SpidermiRprepare_NET(organismID = org[6,],data = out_net)
-miRNA_complNET<-SpidermiRanalyze_mirna_gene_complnet(data=geneSymb_net,disease="prostate cancer",miR_trg="val")
-
-biomark_of_interest<-read.delim("C:/Users/UserInLab05/Google Drive/MIRNA AND GENEMANIA/1 case study/deg_prostate.txt",header=FALSE)
-subnet<-SpidermiRanalyze_direct_subnetwork(data=miRNA_complNET,BI=biomark_of_interest$V1)
-comm2<-  SpidermiRanalyze_Community_detection(data=subnet,type="FC") 
-cd_net<-SpidermiRanalyze_Community_detection_net(data=subnet,comm_det=comm2,size=2)
-SpidermiRvisualize_mirnanet(data=cd_net)
-miRNA_NET<-SpidermiRanalyze_mirna_network(data=geneSymb_net,disease="prostate cancer")
-
-cd_net_miRNA<-SpidermiRanalyze_Community_detection_net(data=miRNA_NET,comm_det=comm2,size=2)
-
-SpidermiRvisualize_mirnanet(data=cd_net_miRNA)
-
-
+a<-Case_Study1_loading_1_network(species)
+b<-Case_Study1_loading_2_network(data=a)
+c<-Case_Study1_loading_3_network(data=b,dataFilt=dataFilt,dataClin=dataClin)
+d<-Case_Study1_loading_4_network(TERZA_NET=c)
 
 ```
 
 ## Case Study n.2: miRNAs regulating degree centrality genes in physical interactions network in breast cancer
 
+We studied in this case study the relationships between miRNAs with higher centrality and their target proteins with higher centrality. Please see `SpidermiR:Application Examples` for more information. 
+
+
 ```{r, eval = FALSE}
-org<-SpidermiRquery_species(species)
-net_PHint<-SpidermiRquery_spec_networks(organismID = org[6,],network = "PHint")
-out_net<-SpidermiRdownload_net(net_PHint)
-geneSymb_net<-SpidermiRprepare_NET(organismID = org[6,],data = out_net)
-ds<-do.call("rbind", geneSymb_net)
-data1<-as.data.frame(ds[!duplicated(ds), ]) 
-
-sdas<-cbind(data1$gene_symbolA,data1$gene_symbolB)
-sdas<-as.data.frame(sdas[!duplicated(sdas), ]) 
-miRNA_NET<-SpidermiRanalyze_mirna_network(data=geneSymb_net,disease="breast cancer")
-topwhol<-SpidermiRanalyze_degree_centrality(sdas)
-top10_cent_gene<-SpidermiRanalyze_degree_centrality(miRNA_NET)
-miRNA_degree<-top10_cent_gene[grep("hsa",top10_cent_gene$dfer),]
-
-
+a2<-Case_Study2_loading_1_network(species)
+b2<-Case_Study2_loading_2_network(data=a2)
+c2<-Case_Study2_loading_3_network(sdas=a2,miRNA_NET=b2)
 ```
 
 ******
